plugin upgrades