@@ -41,8 +41,10 @@
         <basepom.plugin.shade.version>2.4</basepom.plugin.shade.version>
         <basepom.plugin.site.version>3.3</basepom.plugin.site.version>
         <basepom.plugin.source.version>2.4</basepom.plugin.source.version>
-        <basepom.plugin.surefire.version>2.18.1</basepom.plugin.surefire.version>
+        <basepom.plugin.surefire.version>2.19.1</basepom.plugin.surefire.version>
         <basepom.plugin.versions.version>2.2</basepom.plugin.versions.version>
+        <basepom.plugin.release.version>2.5.2</basepom.plugin.release.version>
+        <basepom.plugin.properties.version>1.0.0</basepom.plugin.properties.version>
 
         <basepom.checkstyle.not.configured>false</basepom.checkstyle.not.configured>
     </properties>
@@ -146,6 +148,11 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>properties-maven-plugin</artifactId>
+                    <version>${basepom.plugin.properties.version}</version>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
                     <version>${basepom.plugin.enforcer.version}</version>
@@ -171,15 +178,13 @@
                     <groupId>pl.project13.maven</groupId>
                     <artifactId>git-commit-id-plugin</artifactId>
                     <version>${basepom.plugin.git-commit-id.version}</version>
-
                     <configuration>
                         <prefix>git</prefix>
                         <dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
                         <verbose>true</verbose>
                         <dotGitDirectory>${basedir}/.git</dotGitDirectory>
                         <skipPoms>true</skipPoms>
-                        <!-- this is false by default, forces the plugin to generate the git.properties file -->
-                        <generateGitPropertiesFile>false</generateGitPropertiesFile>
+                        <generateGitPropertiesFile>true</generateGitPropertiesFile>
                         <generateGitPropertiesFilename>src/main/resources/git.properties</generateGitPropertiesFilename>
                         <failOnNoGitDirectory>false</failOnNoGitDirectory>
                         <gitDescribe>
@@ -194,7 +199,6 @@
                         </gitDescribe>
                     </configuration>
                 </plugin>
-
                 <!-- Compiler plugin, change default source version to 1.8 (Apparently it defaults to 1.5) -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -208,7 +212,23 @@
                         <maxmem>${basepom.build.memory.max}</maxmem>
                         <showWarnings>true</showWarnings>
                         <compilerArgument>-Xlint:unchecked</compilerArgument>
+                        <compilerId>javac-with-errorprone</compilerId>
+                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.codehaus.plexus</groupId>
+                            <artifactId>plexus-compiler-javac-errorprone</artifactId>
+                            <version>2.5</version>
+                        </dependency>
+                        <!-- override plexus-compiler-javac-errorprone's dependency on
+                             Error Prone with the latest version -->
+                        <dependency>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>2.0.7</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
 
                 <plugin>
@@ -245,30 +265,35 @@
                 <!-- maven-surefire-plugin is the default target when running 'mvn test'.  We include it here  -->
                 <!-- since we need to specify the custom.logpath variable in order for our logging to work.    -->
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <version>${basepom.plugin.surefire.version}</version>
                     <configuration>
-                        <!-- http://maven.apache.org/surefire/maven-surefire-plugin/examples/fork-options-and-parallel-execution.html -->
-                        <forkCount>2.5C</forkCount>
-                        <reuseForks>false</reuseForks>
-                        <argLine>-Dfile.encoding=${project.build.sourceEncoding} -Xms${basepom.build.memory.initial}
-                            -Xmx${basepom.build.memory.max} -XX:MaxPermSize=256m
-                        </argLine>
-                        <systemPropertyVariables>
-                            <sun.jnu.encoding>${project.build.sourceEncoding}</sun.jnu.encoding>
-                            <user.timezone>UTC</user.timezone>
-                            <java.awt.headless>true</java.awt.headless>
-                            <custom.logpath>${project.build.directory}</custom.logpath>
-                            <buildDirectory>${project.build.directory}</buildDirectory>
-                        </systemPropertyVariables>
+                        <properties>
+                            <property>
+                                <name>junit</name>
+                                <value>false</value>
+                            </property>
+                        </properties>
+                        <threadCount>1</threadCount>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-junit47</artifactId>
+                            <version>${basepom.plugin.surefire.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-testng</artifactId>
+                            <version>${basepom.plugin.surefire.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
-
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.5.2</version>
+                    <version>${basepom.plugin.release.version}</version>
                     <configuration>
                         <tagNameFormat>v@{project.version}</tagNameFormat>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
@@ -324,9 +349,23 @@
                     <configuration>
                         <skip>false</skip>
                         <failBuildInCaseOfConflict>true</failBuildInCaseOfConflict>
+                        <ignoredDependencies>
+                            <dependency>
+                                <!-- seems to have some duplicates with hibernate-jpa-2.1-api but should be ignored-->
+                                <groupId>org.apache.tomcat.embed</groupId>
+                                <artifactId>tomcat-embed-core</artifactId>
+                            </dependency>
+                        </ignoredDependencies>
+                        <ignoredResources>
+                            <resource>META-INF/spring.factories</resource>
+                            <resource>META-INF/spring.provides</resource>
+                            <resource>META-INF/additional-spring-configuration-metadata.json</resource>
+                            <resource>META-INF/spring-configuration-metadata.json</resource>
+                            <resource>META-INF/web-fragment.xml</resource>
+                            <resource>changelog.txt</resource>
+                        </ignoredResources>
                     </configuration>
                 </plugin>
-
                 <!-- Specify explicit known-good versions for plugins -->
 
                 <plugin>
